--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@studio-freight/hamo": "^0.6.32",
+    "@studio-freight/react-lenis": "^0.0.47",
     "gsap-trial": "^3.12.5",
     "next": "14.1.3",
     "react": "^18",
